DDF-4759 updated product site for 2.25.1 release

--- a/Documentation-versions.html
+++ b/Documentation-versions.html
@@ -161,7 +161,12 @@
                     <tbody id="version-history-table">
                         <!-- New versions added from scripts.js (Script inactive until repo transition is complete-->
                         <!-- Below are archival versions -->
-
+                        <tr>
+                            <td>2.24.0</td>
+                            <td>2020-05-08</td>
+                            <td class="text-center"><a href="archive/docs-2.24.0.html">html</a></td>
+                            <td class="text-center"><a href="archive/docs-2.24.0.pdf" target="_blank">pdf</a></td>
+                        </tr>
                         <tr>
                             <td>2.21.6</td>
                             <td>2020-04-02</td>
