updated product website for version 2.26.17

--- a/Documentation-versions.html
+++ b/Documentation-versions.html
@@ -159,6 +159,18 @@
                             </tr>
                     </thead>
                     <tbody id="version-history-table">
+                        <tr>
+                            <td>2.26.17</td>
+                            <td>2021-09-22</td>
+                            <td class="text-center"><a href="archive/docs-2.26.17.html">html</a></td>
+                            <td class="text-center"><a href="archive/docs-2.26.17.pdf" target="_blank">pdf</a></td>
+                        </tr>
+                        <tr>
+                            <td>2.25.0</td>
+                            <td>2020-05-08</td>
+                            <td class="text-center"><a href="archive/docs-2.24.0.html">html</a></td>
+                            <td class="text-center"><a href="archive/docs-2.24.0.pdf" target="_blank">pdf</a></td>
+                        </tr>
                         <!-- New versions added from scripts.js (Script inactive until repo transition is complete-->
                         <!-- Below are archival versions -->
                         <tr>
